--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ html {
 body {
     font: 20px/1.5 "Microsoft YaHei",Tahoma,Arial,Helvetica,sans-serif;
     word-break: break-all;
-    color:#fff;
+    color:#333;
     word-wrap: break-word; }
 
 body, h1, h2, h3, h4, h5, h6, p, dl, dd {
@@ -69,3 +69,20 @@ a:hover {
 
 .fr {
     float: right; }
+.basic-infor{padding:10px;margin-bottom:15px;border-bottom:1px solid #eaeaea;color:#333;}
+nav{position:fixed;height:40px;background:#000;opacity: 0.5;color:#fff;top:0; left:0;width:100%;transition: 1s all ease;z-index:12;}
+.navlist{display:flex;flex-direction: row;width:1200px;margin:0 auto;}
+.navlist li{width:100px;text-align:center;font-size:14px;line-height:40px;cursor:pointer;}
+.navlist li a{color:#fff;}
+.navlist li.active{background:#ff0000;}
+.topbox{display:flex;flex-direction: row;justify-content: space-between; align-items: baseline}
+
+.flexbox{display:flex;flex-direction: row;font-size:16px;}
+.flexbox > aside:first-child{margin-right:20px;}
+.contact-infor span{margin-right:10px;}
+.specific{font-size:16px;margin-top:15px;}
+.top-img01{position:absolute;left:0; top:10%;}
+.top-img02{position:absolute;left:0; bottom:10%;}
+.top-img03{position:absolute;right:0; top:10%;}
+.top-img04{position:absolute;right:0; bottom:10%;}
+#fullpage{width:1200px;margin:0 auto;}
